# Inquiry-lead-hunter

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: run.yml
config/: prompts.yaml  settings.yaml
scripts/: diagnose_leads.py  test_claude_scoring.py  test_gmail_connection.py  test_slack_notification.py  verify_leads.py
src/inquiry_lead_hunter/: __init__.py  config.py  gmail_client.py  keyword_filter.py  llm_scorer.py  main.py  models.py  noise_filter.py  slack_notifier.py
tests/: conftest.py  test_keyword_filter.py  test_llm_scorer.py  test_main.py  test_noise_filter.py
